--- a/index.Rmd
+++ b/index.Rmd
@@ -3,24 +3,19 @@ title: "SQL"
 output: html_document
 ---
 
-# This is a first-level header
-## This is a second-level header
-### This is a third-level header
+## Filtering Columns and Rows
 
-* item 1
-* item 2
-* item 3
-* item 4
+with SQL, one can filter columns with SELECT and rows with WHERE. Let's try an example with the Lahman baseball database. First, we need to load the appropriate packages. 
 
-For a parcel of goods, just call me quester.
+```{r warning=FALSE,message=FALSE}
+library(Lahman)
+library(sqldf)
+```
 
-column 1 | column 2
-- | -
-Phillies | National
-Yankees | American
-Cubs | National
-Red Sox | American
 
-![](70-orson-welles-theredlist-1.jpg)
-
-<img src="70-orson-welles-theredlist-1.jpg" width="200" />
+Now, suppose we would like to see the homerun totals for the 1927 Yankees. We could write the following:
+```{r}
+query<-"SELECT playerID,yearID,teamID, HR FROM Batting
+WHERE teamID='NYA' and yearID=1927"
+sqldf(query)
+```
