--- a/index.Rmd
+++ b/index.Rmd
@@ -19,3 +19,39 @@ query<-"SELECT playerID,yearID,teamID, HR FROM Batting
 WHERE teamID='NYA' and yearID=1927"
 sqldf(query)
 ```
+##September 5, 2017
+Find All Instances Where Yankees Have Hit 40 Homeruns or More.
+```{r}
+query<-"SELECT playerID,teamID,yearID,HR FROM Batting
+WHERE teamID='NYA' and HR>=40"
+
+sqldf(query)
+
+```
+Find All Examples Where a Player Had More Than 40 Homeruns but Less Than 60 Strikeouts.
+```{r}
+query<-"SELECT playerID,teamID,yearID,HR,SO FROM Batting
+WHERE teamID='NYA' and HR>40 and SO<60"
+sqldf(query)
+```
+Find All Instances of Philies in the 1970's Hitting More Than 30 Homeruns.
+```{r}
+query<-"SELECT playerID,teamID,yearID,HR FROM Batting
+WHERE teamID='PHI' and yearID>='1970' and yearID<='1979' and HR>30"
+sqldf(query) 
+```
+Find Every Instance of a Player Hitting More Than 50 Homeruns, but Let's Have the Players With the Most Homeruns on Top.
+```{r}
+query<-"SELECT playerID,teamID,yearID,HR FROM Batting
+WHERE HR>50 
+ORDER BY HR"
+sqldf(query) 
+```
+Find All Instances of a Player Striking Out Less Than 10 Times. Make Sure Each Player Had at Least 400 At-Bats. Players With the Least Strikeouts at the Top. 
+```{r}
+query<-"SELECT playerID,teamID,yearID,SO,AB FROM Batting
+WHERE SO<10 and AB>=400
+ORDER BY SO"
+sqldf(query)
+```
+
