--- a/index.Rmd
+++ b/index.Rmd
@@ -44,7 +44,7 @@ Find Every Instance of a Player Hitting More Than 50 Homeruns, but Let's Have th
 ```{r}
 query<-"SELECT playerID,teamID,yearID,HR FROM Batting
 WHERE HR>50 
-ORDER BY HR"
+ORDER BY HR DESC"
 sqldf(query) 
 ```
 Find All Instances of a Player Striking Out Less Than 10 Times. Make Sure Each Player Had at Least 400 At-Bats. Players With the Least Strikeouts at the Top. 
@@ -54,4 +54,48 @@ WHERE SO<10 and AB>=400
 ORDER BY SO"
 sqldf(query)
 ```
-
+##Examples of Aggregation
+***
+Find the career Homerun totals for all players. Limit the display to only those that have a career total of 600 or more Homeruns. Have the players with the highest total at the top.
+```{r}
+query<-"SELECT playerID,sum(HR) FROM Batting 
+GROUP BY playerID 
+HAVING sum(HR)>=600
+ORDER BY sum(HR) DESC"
+sqldf(query)
+```
+Find the players who averaged 30 Homeruns per season over their career. Put the players with the highest average at the top.
+```{r}
+query<-"SELECT playerID,avg(HR) FROM Batting
+GROUP BY playerID
+HAVING avg (HR)>30
+ORDER BY avg(HR) DESC"
+sqldf(query)
+```
+##Joining Master Table 
+***
+Join Babe Ruth By His First and Last Name
+```{r}
+query<-"SELECT nameFirst,nameLast,teamID,yearID,HR
+FROM Batting INNER JOIN Master
+ON Batting.playerID=Master.playerID
+WHERE Batting.playerID='ruthba01'"
+sqldf(query)
+```
+Find all instances of players hitting more than 50 Homeruns. Give first and last names, teamID, yearID and Homeruns. Have the players with the highest Homeruns total at the top.
+```{r}
+query<-"SELECT nameFirst,nameLast,teamID,yearID,HR
+FROM Batting INNER JOIN Master
+ON Batting.playerID=Master.playerID
+WHERE HR>50
+ORDER BY HR DESC"
+sqldf(query)
+```
+Join Babe Ruth By His Team Name
+```{r}
+query<-"SELECT playerID,name,Batting.yearID,Batting.HR
+FROM Batting INNER JOIN Teams
+ON Batting.teamID=Teams.teamID AND Batting.yearID=Teams.yearID
+WHERE playerID='ruthba01'"
+sqldf(query)
+```
