--- a/index.Rmd
+++ b/index.Rmd
@@ -5,7 +5,7 @@ output: html_document
 ***
 ## Filtering Columns and Rows
 
-with SQL, one can filter columns with SELECT and rows with WHERE. Let's try an example with the Lahman baseball database. First, we need to load the appropriate packages. 
+With SQL, One Can Filter Columns With SELECT and Rows With WHERE. Let's Try An Example With the Lahman Baseball Database. First, We Need to Load the Appropriate Packages. 
 
 ```{r warning=FALSE,message=FALSE}
 library(Lahman)
